--- a/docs/RepastNG/browser.adoc
+++ b/docs/RepastNG/browser.adoc
@@ -21,8 +21,17 @@ The browser-based GUI is an alpha level feature in Repast Simphony 2.7, and whil
 not all, models should load and run, the full array of existing GUI elements
 is not yet supported. For example, controlling simulations through the User Panel
 and visualizing ReLogo displays other than charts are both not yet supported.
-The `Geography`, `JZombies`, `GlidersGrid`, and `GridGameOfLife` demonstration models provide 
-the best examples of the newly implemented browser GUI.
+In particular, the:
+
+* `Geography`
+* `JZombies`
+* `GlidersGrid`
+* `GridGameOfLife`
+demonstration models provide the best examples of the newly implemented browser GUI.
+
+NOTE: As of this writing, an https://github.com/mrdoob/three.js/issues/22582[issue] has been reported for an incompatibility 
+between the three.js library and the Safari browser (version 15.0), causing the user interface to not load properly.
+You can either use another browser or navigate to the `Developer` menu in Safari and enable `Experimental Features > WebGL via Metal`.
 
 For feedback and questions about the browser GUI please contact us through our https://repast.github.io/support.html[regular support channels].
 
