--- a/docs/RepastNG/browser.adoc
+++ b/docs/RepastNG/browser.adoc
@@ -1,5 +1,5 @@
 = Running your Repast Simphony Model via a Browser
-October 2021
+April 2022
 // NO SPACES BETWEEN LEADING TEXT AND : OPTIONS
 :toc:
 :icons:
@@ -131,15 +131,15 @@ macOS `client.js` can be found at:
 
 `/Applications/Repast Simphony x.x.x/Eclipse.app/Contents/Eclipse/plugins/repast.simphony.server_x.x.x/web/static/js/client.js`
 
-where `x.x.x` is the version number (e.g., 2.9.1). On Windows, `client.js` can be found at:
-
-TODO: windows location
+On Windows, `client.js` can be found at:
+TODO: complete windows location
+`C:\Users\<username>\RepastSimphony-x.x.x`
 
 And on Linux, at:
 
-`Z/Eclipse/plugins/repast.simphony.server_x.x.x/web/static/js/client.js`
+`X/Eclipse/plugins/repast.simphony.server_x.x.x/web/static/js/client.js`
 
-where `Z` is the install location.
+where `X` is the install location and `x.x.x` is the version number (e.g., 2.9.1). 
 
 In `client.js` the port number is set on line 187:
 
