--- a/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
+++ b/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
@@ -41,7 +41,7 @@
 
 \title{ReLogo Getting Started Guide}
 \author{Jonathan Ozik - Repast Development Team}
-\date{\today}                                           % Activate to display a given date or no date
+%\date{\today}                                           % Activate to display a given date or no date
 
 \begin{document} 
 \maketitle
@@ -1078,7 +1078,7 @@ After disabling the ReLogo Resource Filter (Section~\ref{sec:RRF}), one of the e
 %Needs work.
 %\subsection{Modifying the Default Turtle}
 %Needs work.
-%By default, commands that refer to ÒturtleÓ in a generic way use the UserTurtle turtle type. If, however, you would like to have the generic ÒturtleÓ refer to your own custom turtle type, go through the following steps:
+%By default, commands that refer to ï¿½turtleï¿½ in a generic way use the UserTurtle turtle type. If, however, you would like to have the generic ï¿½turtleï¿½ refer to your own custom turtle type, go through the following steps:
 %
 %\textbf{Need to include mention of disabling ReLogo filter in package explorer.}
 
