--- a/docs/Statecharts/Statecharts.tex
+++ b/docs/Statecharts/Statecharts.tex
@@ -41,7 +41,7 @@
 
 \title{Repast Statecharts Guide}
 \author{Jonathan Ozik, Nick Collier - Repast Development Team}
-\date{\today}                                           % Activate to display a given date or no date
+%\date{\today}                                           % Activate to display a given date or no date
 
 \begin{document} 
 \maketitle
